--- a/web-static/index.html
+++ b/web-static/index.html
@@ -239,7 +239,7 @@
             <ul class="nav">
 			  <li class="active"><a href="index.html">Stats</a></li>
 			  <li><a href="graphs.html">Graph</a></li>
-              <li><a href="https://github.com/Rav3nPL/p2pool-rav">Contact</a></li>
+              <li><a href="https://github.com/2chcoinpool/2chcoinp2pool">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -346,7 +346,7 @@
 	</div>
 	<div style="border-bottom: 1px solid #ddd;"></div>
 	<center>
-        <tt>P2Pool version: <span id="version"></span> <a href="https://github.com/Rav3nPL/p2pool-rav">GIT</a></tt><br/>
+        <tt>P2Pool version: <span id="version"></span> <a href="https://github.com/2chcoinpool">GIT</a></tt><br/>
 		<tt>Interface by hardcpp <a href="https://github.com/hardcpp/P2PoolExtendedFrontEnd">https://github.com/hardcpp/P2PoolExtendedFrontEnd</a></tt><br/>
 	</center>
 		<br/>
